--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script defer src="./modal.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
