--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
             <li class="team_item">
               <img
                 class="team_item_image"
-                src="./images/team/1.jpg"
+                srcset="
+                  ./images/features/1.jpg    1x,
+                  ./images/features/1@2x.jpg 2x,
+                  images/features/1@3x.jpg   3x
+                "
+                src="./images/features/"
                 alt="man smiling with beard"
                 width="264"
                 height="260"
@@ -190,7 +195,12 @@
             <li class="team_item">
               <img
                 class="team_item_image"
-                src="./images/team/2.jpg"
+                srcset="
+                  ./images/features/2.jpg    1x,
+                  ./images/features/2@2x.jpg 2x,
+                  images/features/2@3x.jpg   3x
+                "
+                src="./images/features/2.jpg"
                 alt="young man smiling and looking away"
                 width="264"
                 height="260"
@@ -235,7 +245,12 @@
             <li class="team_item">
               <img
                 class="team_item_image"
-                src="./images/team/3.jpg"
+                srcset="
+                  ./images/features/3.jpg    1x,
+                  ./images/features/3@2x.jpg 2x,
+                  images/features/3@3x.jpg   3x
+                "
+                src="./images/features/3.jpg"
                 alt="young women smiling"
                 width="264"
                 height="260"
@@ -280,7 +295,12 @@
             <li class="team_item">
               <img
                 class="team_item_image"
-                src="./images/team/4.jpg"
+                srcset="
+                  ./images/features/4.jpg    1x,
+                  ./images/features/4@2x.jpg 2x,
+                  images/features/4@3x.jpg   3x
+                "
+                src="./images/features/4.jpg"
                 alt="young man smiling "
                 width="264"
                 height="260"
@@ -335,7 +355,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/1.jpg"
+                  srcset="
+                    ./images/portfolio/1.jpg    1x,
+                    ./images/portfolio/1@2x.jpg 2x,
+                    images/portfolio/1@3x.jpg   3x
+                  "
+                  src="./images/portfolio/2.jpg"
                   alt="bank app"
                   width="360"
                   height="300"
@@ -358,7 +383,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/2.jpg"
+                  srcset="
+                    ./images/portfolio/2.jpg    1x,
+                    ./images/portfolio/2@2x.jpg 2x,
+                    images/portfolio/2@3x.jpg   3x
+                  "
+                  src="./images/portfolio/2.jpg"
                   alt="QR code on phone"
                   width="360"
                   height="300"
@@ -380,7 +410,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/3.jpg"
+                  srcset="
+                    ./images/portfolio/3.jpg    1x,
+                    ./images/portfolio/3@2x.jpg 2x,
+                    images/portfolio/3@3x.jpg   3x
+                  "
+                  src="./images/portfolio/2.jpg"
                   alt="notebook and phone with app"
                   width="360"
                   height="300"
@@ -402,7 +437,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/4.jpg"
+                  srcset="
+                    ./images/portfolio/4.jpg    1x,
+                    ./images/portfolio/4@2x.jpg 2x,
+                    images/portfolio/4@3x.jpg   3x
+                  "
+                  src="./images/portfolio/4.jpg"
                   alt="man holding steering wheel"
                   width="360"
                   height="300"
@@ -424,7 +464,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/5.jpg"
+                  srcset="
+                    ./images/portfolio/5.jpg    1x,
+                    ./images/portfolio/5@2x.jpg 2x,
+                    images/portfolio/5@3x.jpg   3x
+                  "
+                  src="./images/portfolio/5.jpg"
                   alt="screen illustrations"
                   width="360"
                   height="300"
@@ -446,7 +491,12 @@
               <div class="porfolio_item_image">
                 <img
                   class="portfolio_photo"
-                  src="./images/portpholio/6.jpg"
+                  srcset="
+                    ./images/portfolio/6.jpg    1x,
+                    ./images/portfolio/6@2x.jpg 2x,
+                    images/portfolio/6@3x.jpg   3x
+                  "
+                  src="./images/portfolio/6.jpg"
                   alt="girl in glasses smiling"
                   width="360"
                   height="300"
