--- a/index.html
+++ b/index.html
@@ -353,18 +353,45 @@
           <ul class="portfolio_table">
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/1.jpg    1x,
-                    ./images/portfolio/1@2x.jpg 2x,
-                    images/portfolio/1@3x.jpg   3x
-                  "
-                  src="./images/portfolio/2.jpg"
-                  alt="bank app"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/1.jpg    1x,
+                      ./images/portfolio/desktop/1@2x.jpg 2x,
+                      ./images/portfolio/desktop/1@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/1.jpg    1x,
+                      ./images/portfolio/tablet/1@2x.jpg 2x,
+                      ./images/portfolio/tablet/1@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/1.jpg    1x,
+                      ./images/portfolio/mobile/1@2x.jpg 2x,
+                      ./images/portfolio/mobile/1@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/1.jpg    1x,
+                      ./images/portfolio/1@2x.jpg 2x,
+                      images/portfolio/1@3x.jpg   3x
+                    "
+                    src="./images/portfolio/2.jpg"
+                    alt="bank app"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -381,18 +408,45 @@
             </li>
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/2.jpg    1x,
-                    ./images/portfolio/2@2x.jpg 2x,
-                    images/portfolio/2@3x.jpg   3x
-                  "
-                  src="./images/portfolio/2.jpg"
-                  alt="QR code on phone"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/2.jpg    1x,
+                      ./images/portfolio/desktop/2@2x.jpg 2x,
+                      ./images/portfolio/desktop/2@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/2.jpg    1x,
+                      ./images/portfolio/tablet/2@2x.jpg 2x,
+                      ./images/portfolio/tablet/2@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/2.jpg    1x,
+                      ./images/portfolio/mobile/2@2x.jpg 2x,
+                      ./images/portfolio/mobile/2@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/2.jpg    1x,
+                      ./images/portfolio/2@2x.jpg 2x,
+                      images/portfolio/2@3x.jpg   3x
+                    "
+                    src="./images/portfolio/2.jpg"
+                    alt="QR code on phone"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -408,18 +462,45 @@
             </li>
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/3.jpg    1x,
-                    ./images/portfolio/3@2x.jpg 2x,
-                    images/portfolio/3@3x.jpg   3x
-                  "
-                  src="./images/portfolio/2.jpg"
-                  alt="notebook and phone with app"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/3.jpg    1x,
+                      ./images/portfolio/desktop/3@2x.jpg 2x,
+                      ./images/portfolio/desktop/3@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/3.jpg    1x,
+                      ./images/portfolio/tablet/3@2x.jpg 2x,
+                      ./images/portfolio/tablet/3@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/3.jpg    1x,
+                      ./images/portfolio/mobile/3@2x.jpg 2x,
+                      ./images/portfolio/mobile/3@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/3.jpg    1x,
+                      ./images/portfolio/3@2x.jpg 2x,
+                      images/portfolio/3@3x.jpg   3x
+                    "
+                    src="./images/portfolio/2.jpg"
+                    alt="notebook and phone with app"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -435,18 +516,45 @@
             </li>
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/4.jpg    1x,
-                    ./images/portfolio/4@2x.jpg 2x,
-                    images/portfolio/4@3x.jpg   3x
-                  "
-                  src="./images/portfolio/4.jpg"
-                  alt="man holding steering wheel"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/4.jpg    1x,
+                      ./images/portfolio/desktop/4@2x.jpg 2x,
+                      ./images/portfolio/desktop/4@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/4.jpg    1x,
+                      ./images/portfolio/tablet/4@2x.jpg 2x,
+                      ./images/portfolio/tablet/4@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/4.jpg    1x,
+                      ./images/portfolio/mobile/4@2x.jpg 2x,
+                      ./images/portfolio/mobile/4@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/4.jpg    1x,
+                      ./images/portfolio/4@2x.jpg 2x,
+                      images/portfolio/4@3x.jpg   3x
+                    "
+                    src="./images/portfolio/4.jpg"
+                    alt="man holding steering wheel"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -462,18 +570,45 @@
             </li>
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/5.jpg    1x,
-                    ./images/portfolio/5@2x.jpg 2x,
-                    images/portfolio/5@3x.jpg   3x
-                  "
-                  src="./images/portfolio/5.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/5.jpg    1x,
+                      ./images/portfolio/desktop/5@2x.jpg 2x,
+                      ./images/portfolio/desktop/5@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/5.jpg    1x,
+                      ./images/portfolio/tablet/5@2x.jpg 2x,
+                      ./images/portfolio/tablet/5@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/5.jpg    1x,
+                      ./images/portfolio/mobile/5@2x.jpg 2x,
+                      ./images/portfolio/mobile/5@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/5.jpg    1x,
+                      ./images/portfolio/5@2x.jpg 2x,
+                      images/portfolio/5@3x.jpg   3x
+                    "
+                    src="./images/portfolio/5.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -489,18 +624,45 @@
             </li>
             <li class="porfolio_item">
               <div class="porfolio_item_image">
-                <img
-                  class="portfolio_photo"
-                  srcset="
-                    ./images/portfolio/6.jpg    1x,
-                    ./images/portfolio/6@2x.jpg 2x,
-                    images/portfolio/6@3x.jpg   3x
-                  "
-                  src="./images/portfolio/6.jpg"
-                  alt="girl in glasses smiling"
-                  width="360"
-                  height="300"
-                />
+                <picture class="portfolio_photo">
+                  <source
+                    srcset="
+                      ./images/portfolio/desktop/6.jpg    1x,
+                      ./images/portfolio/desktop/6@2x.jpg 2x,
+                      ./images/portfolio/desktop/6@3x.jpg 3x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/tablet/6.jpg    1x,
+                      ./images/portfolio/tablet/6@2x.jpg 2x,
+                      ./images/portfolio/tablet/6@3x.jpg 3x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/mobile/6.jpg    1x,
+                      ./images/portfolio/mobile/6@2x.jpg 2x,
+                      ./images/portfolio/mobile/6@3x.jpg 3x
+                    "
+                    media="(max-width:768px)"
+                  />
+                  <img
+                    class="portfolio_photo"
+                    srcset="
+                      ./images/portfolio/6.jpg    1x,
+                      ./images/portfolio/6@2x.jpg 2x,
+                      images/portfolio/6@3x.jpg   3x
+                    "
+                    src="./images/portfolio/6.jpg"
+                    alt="girl in glasses smiling"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="porfolio_item_layer_par">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -597,64 +759,79 @@
           <use href="./images/icons.svg#uihnclose-black-18dp-2-1"></use>
         </svg>
       </button>
-      <div class="modal_container">
-        <ul class="modal_phone_menu">
-          <li class="modal_phone_item">
-            <a class="modal_phone_item_link active" href="">Studio</a>
-          </li>
-          <li class="modal_phone_item">
-            <a class="modal_phone_item_link" href="">Portfolio</a>
-          </li>
-          <li class="modal_phone_item">
-            <a class="modal_phone_item_link" href="">Contacts</a>
-          </li>
-        </ul>
 
-        <ul class="modal_phone_addr">
-          <li class="modal_phone_addr_item">
-            <a href="tel:+110001111111" class="modal_phone_addr_link active"
-              >+11 (000) 111-11-11</a
+      <ul class="modal_phone_menu">
+        <li class="modal_phone_item">
+          <a class="modal_phone_item_link active" href="">Studio</a>
+        </li>
+        <li class="modal_phone_item">
+          <a class="modal_phone_item_link" href="">Portfolio</a>
+        </li>
+        <li class="modal_phone_item">
+          <a class="modal_phone_item_link" href="">Contacts</a>
+        </li>
+      </ul>
+
+      <ul class="modal_phone_addr">
+        <li class="modal_phone_addr_item">
+          <a href="tel:+110001111111" class="modal_phone_addr_link active"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="modal_phone_addr_item">
+          <a href="mailto:info@devstudio.com" class="modal_phone_addr_link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="team_social_p">
+        <li class="team_social_item">
+          <a
+            href="https://www.instagram.com/goondmb/"
+            class="team_social_item_link"
+            ><svg
+              class="team_social_svg modal_social_svg"
+              width="16"
+              height="16"
             >
-          </li>
-          <li class="modal_phone_addr_item">
-            <a href="mailto:info@devstudio.com" class="modal_phone_addr_link"
-              >info@devstudio.com</a
+              <use href="./images/icons.svg#uihninstagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team_social_item">
+          <a href="" class="team_social_item_link"
+            ><svg
+              class="team_social_svg modal_social_svg"
+              width="16"
+              height="16"
             >
-          </li>
-        </ul>
-        <ul class="team_social_p">
-          <li class="team_social_item">
-            <a
-              href="https://www.instagram.com/goondmb/"
-              class="team_social_item_link"
-              ><svg class="team_social_svg" width="16" height="16">
-                <use href="./images/icons.svg#uihninstagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team_social_item">
-            <a href="" class="team_social_item_link"
-              ><svg class="team_social_svg" width="16" height="16">
-                <use href="./images/icons.svg#uihntwitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team_social_item">
-            <a href="" class="team_social_item_link"
-              ><svg class="team_social_svg" width="16" height="16">
-                <use href="./images/icons.svg#uihnfacebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team_social_item">
-            <a href="" class="team_social_item_link"
-              ><svg class="team_social_svg" width="16" height="16">
-                <use href="./images/icons.svg#uihnlinkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+              <use href="./images/icons.svg#uihntwitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team_social_item">
+          <a href="" class="team_social_item_link"
+            ><svg
+              class="team_social_svg modal_social_svg"
+              width="16"
+              height="16"
+            >
+              <use href="./images/icons.svg#uihnfacebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team_social_item">
+          <a href="" class="team_social_item_link"
+            ><svg
+              class="team_social_svg modal_social_svg"
+              width="16"
+              height="16"
+            >
+              <use href="./images/icons.svg#uihnlinkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <!-- modal=========================================================================================== -->
 
